# batchglprocess

./: CMakeLists.txt  README.md  makefile  processvid.cpp
shaders/: base.frag  lines.frag  useful_functions.frag
src/: CMakeLists.txt  Makefile  cmake_install.cmake  processvid.cpp
